--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Chad <span class="text-secondary">Plourde</span>
         </h1>
         <h2 class="sm-heading">
-            Front End Web Developer
+            Full Stack Web Developer
         </h2>
         <div class="icons">
             <!-- for if I make a twitter or facebook! -->
