added new project and skills

--- a/about.html
+++ b/about.html
@@ -107,12 +107,13 @@
         </h2>
         <ul class="tech-list">
             <!-- js, node, mysql, jquery,  -->
-            <li><i class="fab fa-js fa-3x"></i></li>
-            <li><i class="fab fa-node fa-3x"></i></li>
-            <li><i class="fab fa-html5 fa-3x"></i></li>
-            <li><i class="fab fa-css3-alt fa-3x"></i></li>
-            <li><i class="fab fa-sass fa-3x"></i></li>
-            <li><i class="fab fa-react fa-3x"></i></li>
+            <li title="JavaScript"><i class="fab fa-js fa-3x"></i></li>
+            <li title="Node.js"><i class="fab fa-node fa-3x"></i></li>
+            <li title="HTML"><i class="fab fa-html5 fa-3x"></i></li>
+            <li title="CSS"><i class="fab fa-css3-alt fa-3x"></i></li>
+            <li title="Sass"><i class="fab fa-sass fa-3x"></i></li>
+            <li title="React.js"><i class="fab fa-react fa-3x"></i></li>
+            <li title="Vue.js"><i class="fab fa-vuejs fa-3x"></i></li>
         </ul>
     </main>
 
