--- a/work.html
+++ b/work.html
@@ -58,8 +58,19 @@
         </h2>
         <div class="projects">
             <div class="item">
+                <a href="http://random-name-generators.com" target="_blank">
+                    <img src="img/projects/project1.png" alt="Project 1">
+                </a>
+                <a href="http://random-name-generators.com" class="btn-light" target="_blank">
+                    <i class="fas fa-eye"></i> Project (Latest and greatest!)
+                </a>
+                <a href="https://github.com/Cdplourde/random-name-generators" class="btn-dark" target="_blank">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+            <div class="item">
                 <a href="https://yard-picker.herokuapp.com/" target="_blank">
-                    <img src="img/projects/project1.jpg" alt="Project 1">
+                    <img src="img/projects/project2.jpg" alt="Project 2">
                 </a>
                 <a href="https://yard-picker.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> Project
@@ -70,7 +81,7 @@
             </div>
             <div class="item">
                 <a href="https://mongo-nytimes-scraper.herokuapp.com/" target="_blank">
-                    <img src="img/projects/project2.jpg" alt="Project 2">
+                    <img src="img/projects/project3.jpg" alt="Project 3">
                 </a>
                 <a href="https://mongo-nytimes-scraper.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> Project
@@ -81,7 +92,7 @@
             </div>
             <div class="item">
                 <a href="https://cdplourde.github.io/Poke-BattleSim/" target="_blank">
-                    <img src="img/projects/project3.jpg" alt="Project 3">
+                    <img src="img/projects/project4.jpg" alt="Project 4">
                 </a>
                 <a href="https://cdplourde.github.io/Poke-BattleSim/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> Project
@@ -92,7 +103,7 @@
             </div>
             <div class="item">
                 <a href="https://cdplourde.github.io/Bookworm/" target="_blank">
-                    <img src="img/projects/project4.jpg" alt="Project 4">
+                    <img src="img/projects/project5.jpg" alt="Project 5">
                 </a>
                 <a href="https://cdplourde.github.io/Bookworm/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> Project
@@ -103,7 +114,7 @@
             </div>
             <div class="item">
                 <a href="https://fierce-savannah-10966.herokuapp.com/" target="_blank">
-                    <img src="img/projects/project5.jpg" alt="Project 5">
+                    <img src="img/projects/project6.jpg" alt="Project 6">
                 </a>
                 <a href="https://fierce-savannah-10966.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye"></i> Project
