--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <span class="text-secondary">Phone:</span> (252) 599-0248
             </div>
             <div>
-                <span class="text-secondary">Address:</span> Mesa, Arizona
+                <span class="text-secondary">Address:</span> Tempe, Arizona
             </div>
         </div>
     </main>
